[package]
name = "viletech-utils"
version = "0.0.0"
edition.workspace = true

authors = ["jerome-trc"]
categories = ["game-engines", "game-development"]
description = "Common utilities used by the VileTech Engine"
homepage = "https://github.com/jerome-trc/viletech/tree/master/utils"
keywords = ["doom", "gamedev", "viletech"]
license = "GPL-3.0-or-later"
publish = false
repository.workspace = true

[features]
default = []
serde = ["dep:serde"]
sparseset = []

[dependencies]
arrayvec.workspace = true
bytemuck.workspace = true
byteorder.workspace = true
fixed.workspace = true
glam.workspace = true
home.workspace = true
regex.workspace = true
serde = { workspace = true, optional = true }
smartstring.workspace = true
triomphe.workspace = true

[dev-dependencies]
criterion.workspace = true
