[package]
name = "viletech-fs"
version = "0.0.0"
edition.workspace = true

authors = ["jerome-trc"]
categories = [] # TODO
description = "VileTech's virtual file system"
homepage = "https://github.com/jerome-trc/viletech/tree/master/vfs"
keywords = ["doom", "gamedev", "viletech"]
license = "GPL-3.0-or-later"
publish = false
repository.workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
util = { package = "viletech-utils", path = "../utils" }
wadload.path = "../wadload"

flate2 = "1.0.28"
parking_lot.workspace = true
rayon.workspace = true
serde = { workspace = true, optional = true }
slotmap.workspace = true
zip_structs = "0.2.1"

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion.workspace = true
