[package]
name = "vilify"
version = "0.0.0"
edition.workspace = true

authors = ["jerome-trc"]
categories = []
description = "VileTech backwards compatibility transformers"
homepage = "https://github.com/jerome-trc/viletech/tree/master/vilify"
keywords = ["viletech"]
license = "MIT OR Apache-2.0"
publish = false
repository.workspace = true

[dependencies]
doomfront = { path = "../doomfront", features = ["zdoom"] }
util = { package = "viletech-utils", path = "../utils" }

ariadne.workspace = true
crossbeam.workspace = true
dashmap.workspace = true
bitflags.workspace = true
im.workspace = true
parking_lot.workspace = true
petgraph.workspace = true
rayon.workspace = true
regex.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
