[package]
name = "vzscript"
version = "0.0.0"
edition.workspace = true

authors = ["jerome-trc"]
categories = ["compilers", "game-development"]
description = "VileTech's fork of GZDoom's ZScript language"
homepage = "https://github.com/jerome-trc/viletech/tree/master/vzscript"
keywords = ["compiler", "doom", "dsl", "scripting", "viletech"]
license = "MIT OR Apache-2.0"
publish = false
repository.workspace = true

[dependencies]
doomfront = { path = "../doomfront", features = ["serde", "zdoom"] }
util = { package = "viletech-utils", path = "../utils" }
vfs = { package = "viletech-fs", path = "../vfs" }

arc-swap.workspace = true
ariadne.workspace = true
bitflags.workspace = true
bitvec.workspace = true
cranelift.workspace = true
cranelift-jit.workspace = true
cranelift-module.workspace = true
cranelift-interpreter.workspace = true
crossbeam.workspace = true
dashmap.workspace = true
logos.workspace = true
parking_lot.workspace = true
petgraph.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true

# All below are tentative. They will get marked as workspace dependencies if/as
# they prove to be sound and more performant than alternatives.
append-only-vec = "0.1.3"
segvec = "0.2.0"
selfie = "0.0.2"
stable_deref_trait = "1.2.0"

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion.workspace = true
