[package]
name = "zdbsp"
version = "0.0.0"
edition.workspace = true

authors = ["jerome-trc"]
categories = ["game-development"]
description = "Rust wrapper around forked ZDBSP"
homepage = "https://github.com/jerome-trc/viletech/tree/master/zdbsp"
keywords = ["doom", "gamedev"]
publish = false
repository.workspace = true

[features]
default = []
xverbose = []

[dependencies]

[build-dependencies]
bindgen = "0.69.1"
cbindgen = "0.26.0"
cc = { version = "1.0.83", features = ["parallel"] }

[dev-dependencies]
criterion.workspace = true
md5 = "0.7.0"

[[bench]]
name = "bench"
harness = false
