[package]
name = "znbx-sys"
version = "0.0.0"
edition.workspace = true

authors = ["jerome-trc"]
categories = ["game-development"]
description = "FFI bindings to a fork of ZDBSP"
homepage = "https://github.com/jerome-trc/viletech/tree/master/znbx"
keywords = ["doom", "gamedev"]
publish = false
repository.workspace = true

[features]
default = []
xverbose = []

[build-dependencies]
bindgen.workspace = true
cc.workspace = true

[dev-dependencies]
criterion.workspace = true
md5.workspace = true
wadload = { path = "../wadload" }

[[bench]]
name = "bench"
harness = false
