[package]
name = "mus2midi"
version = "0.0.0"
edition.workspace = true

authors = ["jerome-trc"]
categories = ["encoding", "multimedia"]
description = "Rust port of a DMXMUS-to-MIDI converter"
homepage = "https://github.com/jerome-trc/viletech/tree/master/midi"
keywords = ["audio", "dmxmus", "doom", "midi", "music"]
license = "GPL-3.0-or-later"
publish = false
repository.workspace = true

[features]
default = []

[dependencies]
bytemuck.workspace = true
byteorder.workspace = true
midly.workspace = true
